# Kuesto

./: .gitignore  CMakeLists.txt  jsonMaker.cpp  run.cpp
src/files/: ListRandomizer.cpp
src/files/excel/: DataXLSXtraction.cpp  XLSXtraction.cpp
src/headers/: ListRandomizer.h
src/headers/excel/: DataXLSXtraction.h  XLSXtraction.h
thinkingAbout/: XLSX_drawing1.xml  XLSX_sharerdStrings.xml  XLSX_sheet1.xml  test.xlsx  whatIFound
thinkingAbout/excel/: XLSX_drawing1.xml  XLSX_sheet1.xml
thinkingAbout/excel/test/: [Content_Types].xml
thinkingAbout/excel/test/docProps/: core.xml
thinkingAbout/excel/test/xl/: sharedStrings.xml  styles.xml  workbook.xml
thinkingAbout/excel/test/xl/worksheets/: sheet1.xml  sheet2.xml
thinkingAbout/test/: [Content_Types].xml
thinkingAbout/test/docProps/: app.xml  core.xml
thinkingAbout/test/xl/: sharedStrings.xml  styles.xml  workbook.xml
thinkingAbout/test/xl/drawings/: drawing1.xml
thinkingAbout/test/xl/worksheets/: sheet1.xml  sheet2.xml
thinkingAbout/word/: DOCXdocument.xml
thinkingAbout/word/testD/docProps/: app.xml  core.xml
thinkingAbout/word/testD/word/: document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml
